--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
         <a href="activite10.php">A10</a>
         <a href="tp3.php">TP3</a>
     </nav>
-    <div class="container">
+    <div class="contain">
         <main>
-            <section>
                 <h1>Travail pratique 3</h1>
                 <a href="tp3.php">Tableau de temps</a>
-            </section>
         </main>
         <footer>
             Projet Final: Vincent Dubois #2295393
