Page index completé

--- a/index.html
+++ b/index.html
@@ -12,15 +12,66 @@
 
 <body>
     <nav>
-        <a href="index.php">&#x2302</a>
+        <a href="index.html">
+            <p>&#x2302</p>
+        </a>
+        <a href="tp3.php">TP3</a>
         <a href="activite9.php">A9</a>
         <a href="activite10.php">A10</a>
-        <a href="tp3.php">TP3</a>
     </nav>
     <div class="contain">
-        <main>
-                <h1>Travail pratique 3</h1>
+        <main class="grid">
+            <h1>Projet Final</h1>
+            <h1>Environnement de développement Web 1</h1>
+            <section>
+                <h2>Travail pratique 3</h2>
                 <a href="tp3.php">Tableau de temps</a>
+                <p>L'objectif était de créer un tableau de temps 60 rangés par 12 colones. Chaque case devait contenir
+                    une heure entre 1 et 12 et les minutes entre 00 et 59. </p>
+                <p>Maintenant, un utilisateur peut tenter de deviner l'heure.</p>
+                <p>Si l'heure entré est bonne:</p>
+                <ul>
+                    <li>La case s'affichera en vert</li>
+                </ul>
+                <p>Si l'heure entré n'est pas bonne:</p>
+                <ul>
+                    <li>La bonne heure s'affichera en bleu</li>
+                    <li>L'heure utilisateur s'affichera en rouge</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Activité 9</h2>
+                <a href="activite9.php">Jeu de carte brassé aléatoirement</a>
+                <p>L'objectif était de créer une page Web PHP qui:</p>
+                <ul>
+                    <li>Crée un tableau de 13 numéros</li>
+                    <li>Crée un tableau de 4 symboles</li>
+                    <li>Les combines pour créer un tableau de 52 cartes</li>
+                    <li>Divise le tableau de carte en deux tableaux paquets</li>
+                    <li>Crée un tableau qui alterne les paquets</li>
+                    <li>Affiche le dernier tableau</li>
+                </ul>
+                <p>Maintenant, il faut mélanger un nombre aléatoire de fois.</p>
+            </section>
+
+            <section>
+                <h2>Activité 10</h2>
+                <a href="activite10.php">Temps requis pour trouvé une donné</a>
+                <p>L'objectif était de créer une fonction qui prend un mot de passe et le trouve par force brute.<br>
+                    Les critères sont:</p>
+                <ul>
+                    <li>Créez la dîte fonction: générera toutes les possibilités jusqu'au bon mot de passe</li>
+                    <li>Créez 3 mots de passe différents: les mots de passe était de 3 à 5 caractères de longueur et
+                        pouvait contenir des lettres et/ou des
+                        chiffres.</li>
+                    <li>Déterminez le temps requis pour trouver chacun des mots de passe</li>
+                </ul>
+                <p>Maintenant un utilisateur peut entrer un mot de passe de 4 symboles
+                    incluant les lettres de l'alphabet en minuscule et les chiffres (vous pouvez assumer que les
+                    utilisateurs ne feront pas d'erreurs) avec un bouton de soumission.</p>
+            </section>
+
         </main>
         <footer>
             Projet Final: Vincent Dubois #2295393
