--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <li>Déterminez le temps requis pour trouver chacun des mots de passe</li>
                 </ul>
                 <p>Maintenant un utilisateur peut entrer un mot de passe de 4 symboles
-                    incluant les lettres de l'alphabet en minuscule et les chiffres (vous pouvez assumer que les
-                    utilisateurs ne feront pas d'erreurs) avec un bouton de soumission.</p>
+                    incluant les lettres de l'alphabet en minuscule et les chiffres (assumant que l'utilisateur respecte
+                    les conditions) avec un bouton de soumission.</p>
             </section>
 
         </main>
